# property-ir

./: .gitignore  .readthedocs.yaml  COPYING  README.md  flake.nix  pyproject.toml
examples/: example_input1.pir  example_input2.pir  example_input3.pir  example_input4.pir  example_input5.pir  example_nnf1.pir  example_nnf2.pir  example_nnf3.pir
prototype/: main.py
prototype/src/: main.py
prototype/src/sexpr/: __init__.py  base.py  parsing.py  primitives.py  rewriting.py  utils.py
prototype/tests/: conftest.py  helpers.py  input_data.py  strategies.py  test_base.py  test_clock_rewriting.py  test_nnf_rewriting.py  test_parse_raw_sexpr.py  test_parsing.py  test_parsing_strategies.py  test_primitive_rewriting.py  test_rewriting.py  test_tokenize.py  test_utils.py
spec/source/: conf.py  considerations.rst  examples.rst  index.rst  internal_passes.rst  internal_primitives.rst  introduction.rst  primitives.rst  sva_table.rst  syntax.rst  types.rst
spec/source/_ext/: sexpr_ext.py  sexpr_lexer.py
