[project]
name = "property-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "typeguard>=4.4.4",
]

[tool.pyright]
include = ["prototype/src", "prototype/tests"]
extraPaths = ["prototype/src"]

[tool.pytest.ini_options]
testpaths = ["prototype/tests"]
pythonpath = ["prototype/src"]
